force-app/main/default/objects/My_Leads__c/My_Leads__c.object-meta.xml
<CustomObject>
    <label>My Leads</label>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>