force-app/main/default/objects/My_Leads__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>My Leads</relationshipLabel>
    <relationshipName>My_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>