force-app/main/default/objects/My_Leads__c/fields/Lead_Alias__c.field-meta.xml
<CustomField>
    <fullName>Lead_Alias__c</fullName>
    <label>Lead Alias</label>
    <length>30</length>
    <type>Text</type>
</CustomField>