force-app/main/default/objects/My_Leads__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>PhoneNumber</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>