force-app/main/default/objects/My_Leads__c/fields/Primary_Income__c.field-meta.xml
<CustomField>
    <fullName>Primary_Income__c</fullName>
    <label>Primary Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>