force-app/main/default/objects/My_Leads__c/fields/Secondary_Income__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Income__c</fullName>
    <label>Secondary Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>