force-app/main/default/objects/My_Leads__c/validationRules/Phone_Number_Verifications.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Verifications</fullName>
    <active>true</active>
    <errorConditionFormula>(LEN(PhoneNumber__c)  &lt;&gt; 10)</errorConditionFormula>
    <errorDisplayField>PhoneNumber__c</errorDisplayField>
    <errorMessage>The Phone Number you entered is Invalid</errorMessage>
</ValidationRule>