force-app/main/default/objects/My_Leads__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lead_Alias__c</columns>
    <columns>Email_Address__c</columns>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Job__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>